# 2wall2taker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: eggplant.rgb8
src/: 2wall2taker.rc  main.rs  ui.fl  walltaker.rs
